Add test for favorite article api. #33
