# doc/articles.swagger.json
@@ -212,6 +212,36 @@
           "Articles"
         ]
       }
+    },
+    "/articles/{slug}/favorite": {
+      "post": {
+        "operationId": "FavoriteArticle",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/profileArticleResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Articles"
+        ]
+      }
     }
   },
   "definitions": {
@@ -251,7 +281,7 @@
           "type": "boolean",
           "format": "boolean"
         },
-        "favoriteCount": {
+        "favoritesCount": {
           "type": "string",
           "format": "int64"
         },
